fix footer alignment

--- a/src/breadforyouph.scss
+++ b/src/breadforyouph.scss
@@ -91,7 +91,7 @@
 
   footer {
     margin-top: 32px;
-    padding: 16px 0;
+    padding: 16px;
     width: 100%;
     background-color: #1e1e1e;
     min-height: 50px;
@@ -103,6 +103,10 @@
 
     .footer-item {
       margin-right: 10px;
+
+      &:last-of-type {
+          margin: 0;
+      }
     }
 
     .placeholder-logo {
